--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -74,6 +74,19 @@
     
 }
 
+.chatWindow--body::-webkit-scrollbar{
+  
+    width:6px;
+    height: 6px;
+  
+  }
+  
+  .chatWindow--body::-webkit-scrollbar-thumb{
+    
+    background-color: rgba(0,0,0,0.2);
+    
+  }
+
 .chatWindow--footer{
 
     height: 62px;
